--- a/HaoChiBao/app/src/main/res/layout/hot_pot_details_head.xml
+++ b/HaoChiBao/app/src/main/res/layout/hot_pot_details_head.xml
@@ -266,6 +266,7 @@
                 android:src="@mipmap/particulars_wifi" />
 
             <TextView
+                android:id="@+id/GO"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
