--- a/HaoChiBao/app/src/main/res/layout/activity_baidu_map.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_baidu_map.xml
@@ -39,5 +39,14 @@
             android:padding="5dp"
             android:layout_margin="5dp"
             />
+        <TextView
+            android:id="@+id/traffic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="实时交通"
+            android:background="@color/iconWineColor"
+            android:padding="5dp"
+            android:layout_margin="5dp"
+            />
     </LinearLayout>
 </RelativeLayout>
