--- a/HaoChiBao/app/src/main/res/layout/activity_baidu_map.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_baidu_map.xml
@@ -66,7 +66,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background=""/>
+            android:background="@color/colorAccent"/>
         <EditText
             android:id="@+id/editText2"
             android:layout_width="wrap_content"
