--- a/HaoChiBao/app/src/main/res/layout/activity_user_register.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_user_register.xml
@@ -29,7 +29,6 @@
         android:textColorHint="@color/textGray"
         android:inputType="number"
         android:textSize="@dimen/font_28"
-        android:maxLength="11"
         />
     <RelativeLayout
         android:alpha="0.5"
@@ -43,7 +42,7 @@
             android:gravity="center_vertical"
             android:background="@null"
             android:paddingLeft="10dp"
-            android:id="@+id/register_yanzheng"
+            android:id="@+id/SMS_number"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:drawableLeft="@mipmap/pen1"
@@ -55,8 +54,8 @@
             android:textSize="@dimen/font_28"
             android:maxLength="6"
             />
-
-        <CheckBox
+        <Button
+            android:id="@+id/send_SMS"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="获取验证码"
