--- a/HaoChiBao/app/src/main/res/layout/activity_main.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".activity.BaiduNaviActivity" >
-
+    <EditText
+        android:id="@+id/edit_city_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="请输入目的地"/>
     <Button
         android:id="@+id/wgsNaviBtn"
         android:layout_width="match_parent"
