--- a/HaoChiBao/app/src/main/res/layout/activity_homepage.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_homepage.xml
@@ -194,7 +194,7 @@
             <ListView
                 android:id="@+id/homepage_lv"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
             </ListView>
         </LinearLayout>
     </ScrollView>
